@@ -1,3 +1,9 @@
+2010-07-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Add: Complete revision by `svn log'.
+
+	* Fix: Complete revision ignore-case.
+
 2010-07-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: Wrong fontified in fsvn-log-list-mode
